
  [ Filippo Giunchedi ]
  * debian/service: match sysvinit behaviour (send SIGTERM with 20s timeout,
    never send SIGKILL) Closes: #824842

  [ Martín Ferrari ]
  * New upstream release. Update dependencies.
  * Switch to use the golang-github-prometheus-client-model-dev package.
  * Improve the way datetimepicker is built.
  * Refresh patches.

 -- Martín Ferrari <tincho@debian.org>  Sun, 29 May 2016 12:58:16 +0000

prometheus (0.18.0+ds-2) unstable; urgency=medium

  * Depend on fsnotify 1.3.0-3, which fixes build issues in arm64, ppc64, and
    ppc64el. Remove workaround patch.
  * Fix default configuration file. Closes: #822471.
  * debian/control: Update Standards-Version without changes.
  * debian/control: Make all URLs use https.

 -- Martín Ferrari <tincho@debian.org>  Sat, 30 Apr 2016 23:16:14 +0100

prometheus (0.18.0+ds-1) unstable; urgency=medium

  * New upstream release.

 -- Martín Ferrari <tincho@debian.org>  Tue, 19 Apr 2016 13:54:45 +0000

prometheus (0.18.0~rc1+ds-1) unstable; urgency=medium

  * New upstream release.

 -- Martín Ferrari <tincho@debian.org>  Mon, 11 Apr 2016 14:32:45 +0100

prometheus (0.17.0+ds-3) unstable; urgency=medium

  * Completely disable fsnofity in arm64, ppc64, and ppc64el, as it is broken
    in these architectures.

 -- Martín Ferrari <tincho@debian.org>  Mon, 28 Mar 2016 21:50:05 +0100

prometheus (0.17.0+ds-2) unstable; urgency=medium

  * debian/rules: disable all retrieval tests for arm, as these are too flaky in
    slow architectures.

 -- Martín Ferrari <tincho@debian.org>  Mon, 28 Mar 2016 17:43:15 +0000

prometheus (0.17.0+ds-1) unstable; urgency=medium

  * New upstream release.
  * debian/init: sleep longer when stopping the daemon.
  * debian/watch: fix watch file for RC releases.
  * debian/patches/06-Bug#818417-AWS_SDK_changes.patch: Fix FTBFS, thanks to
    Filippo Giunchedi for the patch. Closes: #818417.
  * debian/service: Add systemd unit, thanks to Michael Gebetsroither for the